Updated PaySwarm video to something more demonstrative.

--- a/index.xhtml
+++ b/index.xhtml
@@ -141,13 +141,12 @@ of PaySwarm looks like, check out the
        </h1>
 
 <p class="largeprint">
-The following video explains why just supporting the people you want to
-support and making money on the web is so difficult. It outlines how PaySwarm can
-help build a better Web for all of us.</p>
+The following video demonstrates what a typical purchase looks like on 
+PaySwarm.</p>
 
 <div class="center">
 
-<object width="640" height="385"><param name="movie" value="https://www.youtube.com/v/gYdXZ3-U-oQ?fs=1&amp;hl=en_US"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="https://www.youtube.com/v/gYdXZ3-U-oQ?fs=1&amp;hl=en_US" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="640" height="385"></embed></object>
+<iframe width="640" height="360" src="http://www.youtube.com/embed/02vX36Ntxxk" frameborder="0" allowfullscreen="1"></iframe>
 
 <!--
 <object width="860" height="510">
