--- a/join.xhtml
+++ b/join.xhtml
@@ -52,9 +52,9 @@ human condition.
 Anyone may join the group and participate. Here's how:
 
 <ol style="">
-<li><a href="http://www.w3.org/community/account/requestaccount.html">Get a W3C account</a>.</li>
+<li><a href="http://www.w3.org/community/account/requestaccount.html">Get a W3C account</a>. It may take an hour or two to get approved, sometimes it can take as long as 24 hours. Be patient, this is the slowest step.</li>
 <li><a href="http://www.w3.org/community/webpayments/join">Join the Web Payments Group</a>.</li>
-<li><a href="mailto:public-webpayments-request@w3.org?subject=subscribe">Subscribe to the mailing list</a></li>
+<li><a href="mailto:public-webpayments-request@w3.org?subject=subscribe">Subscribe to the mailing list</a>.</li>
 <li><a href="mailto:public-webpayments-request@w3.org?subject=New Member Introduction">Send an email to introduce yourself to the group</a>. Tell us who you are, what your areas of interest are with respect to value exchange on the Web, and what you hope to get out of the group.</li>
 </ol>
 </p>
