--- a/index.xhtml
+++ b/index.xhtml
@@ -146,7 +146,7 @@ PaySwarm.</p>
 
 <div class="center">
 
-<iframe width="640" height="360" src="http://www.youtube.com/embed/02vX36Ntxxk" frameborder="0" allowfullscreen="1"></iframe>
+<iframe width="640" height="360" src="https://www.youtube.com/embed/02vX36Ntxxk" frameborder="0" allowfullscreen="1"></iframe>
 
 <!--
 <object width="860" height="510">
