Added Pindar Wong's African Union / Web Payments slides.

--- a/intro.xhtml
+++ b/intro.xhtml
@@ -52,7 +52,9 @@ human condition.
 It can be difficult to know where to start, so this page has been created to
 help bring you up to speed with the state of Web Payments. It contains links
 to introductory material related to a variety of the work that is 
-currently happening in the Web Payments group.
+currently happening in the Web Payments group. If any of these technologies
+interest you, consider 
+<a href="join">joining the Web Payments group</a>.
 </p>
     </div>
   </div>
