Fix graph normalization link.
- Use link to latest RDF Graph Normalization spec.
- Add issue markers to be more specific on the algorithm.

--- a/specs/source/http-keys/index.html
+++ b/specs/source/http-keys/index.html
@@ -685,8 +685,9 @@ Remove any <code>signature</code> key-value pair from the top-level of the
           <li>
 Generate the <tdef>normalized message</tdef> by normalizing the 
 <tref>message</tref> according to the 
-<a href="http://json-ld.org/spec/ED/20110911#normalization-1">JSON-LD 
-Universal Graph Normalization Algorithm (UGNA2011)</a>.
+<a href="http://json-ld.org/spec/latest/rdf-graph-normalization">RDF
+Graph Normalization</a> algorithm.
+<div class="issue">Refer to the exact RDF Graph Normalization algorithm.</div>
           </li>
           <li>
 Generate the <tdef>signature value</tdef> by:
@@ -784,8 +785,9 @@ from the <tref>original message</tref>.
           <li>
 Generate the <tdef>original normalized message</tdef> by normalizing the 
 <tref>original message</tref> according to the 
-<a href="http://json-ld.org/spec/ED/20110911#normalization-1">JSON-LD 
-Universal Graph Normalization Algorithm (UGNA2011)</a>.
+<a href="http://json-ld.org/spec/latest/rdf-graph-normalization">RDF
+Graph Normalization</a> algorithm.
+<div class="issue">Refer to the exact RDF Graph Normalization algorithm.</div>
           </li>
           <li>
 Verify the <tdef>original signature value</tdef>:
