--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="col-lg-4 callout">
           <span class="icon icon-users"></span>
           <h2>Who</h2>
-          <p>The people that build the Web and now building payments into its core. 2.4 billion people stand to benefit.</p>
+          <p>The people that built the Web are now building payments into its core. 2.4 billion people stand to benefit.</p>
         </div><!-- col-lg-4 -->
           
         <div class="col-lg-4 callout">
