--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="col-lg-4 callout">
           <span class="icon icon-heart"></span>
           <h2>Why</h2>
-          <p>The Web can help our heal our ailing financial infrastructure and create a more equitable future for all of us.</p>
+          <p>The Web can help us heal our ailing financial infrastructure and create a more equitable future for all of us.</p>
         </div><!-- col-lg-4 -->  
       </div><!-- row -->
     </div><!-- greywrap -->
