Make the offset of the second row of specifications boxes coherent with the first
The boxes of the first row are within a div that has .row class that sets left-margin.

I've put the boxes of the second row in a div with the same classes to make the
layout coherent.

--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@ be found on the <a href="specs/">specifications page</a>.
       <br>
       <br>
 
+    <div class="row white">
         <div class="col-lg-4">
           <!-- START SERVICE 1 -->
                     <div class="service-active">
@@ -200,6 +201,7 @@ be found on the <a href="specs/">specifications page</a>.
                     </div><!-- service-active -->
                     <!-- END SERVICE 3 -->        
         </div><!-- col-lg-4 -->
+      </div><!-- row -->
       </div><!-- row -->
                         <br/>
                         <br/>
