Updated specs page to new website layout.

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ be found on the <a href="specs/">specifications page</a>.
         <div class="col-lg-4">
           <!-- START SERVICE 3 -->
                     <div class="service-active">
-                        <a href="specs"><span class="service-trigger icon icon-rocket"><p>PRODUCTS</p></span></a>
+                        <a href="specs#products"><span class="service-trigger icon icon-rocket"><p>PRODUCTS</p></span></a>
                         <div class="service-content">
                             <p>Payments typically revolve around a particular product or service, so being able to express that product or service on the Web is important. It is also crucial that the description of the product or service is machine-readable to ensure that search engines can easily find the things you want.</p>
                         </div><!-- service-content -->
@@ -144,7 +144,7 @@ be found on the <a href="specs/">specifications page</a>.
 
         <div class="col-lg-4">
                     <div class="service-active">
-                        <a href="specs"><span class="service-trigger icon icon-cart"><p>TRANSACTIONS</p></span></a>
+                        <a href="specs#transactions"><span class="service-trigger icon icon-cart"><p>TRANSACTIONS</p></span></a>
                         <div class="service-content">
                             <p>New breakthroughs in cryptographic currencies and storing and transferring value on the Web provide multiple solutions to executing a monetary transaction on the Web. These technologies are being standardized into something that can be placed into browsers and mobile devices.</p>
                         </div><!-- service-content -->
@@ -155,7 +155,7 @@ be found on the <a href="specs/">specifications page</a>.
         <div class="col-lg-4">
           <!-- START SERVICE 2 -->
                     <div class="service-active">
-                        <a href="specs"><span class="service-trigger icon icon-file"><p>RECEIPTS</p></span></a>
+                        <a href="specs#receipts"><span class="service-trigger icon icon-file"><p>RECEIPTS</p></span></a>
                         <div class="service-content">
                             <p>Machine-readable digital receipts provide detailed information after a transaction has occurred. This enables you to more closely track where your money is going and more easily store your proofs of purchase. We are making it so your financial data is truly portable, and owned by you.</p>
                         </div><!-- service-content -->
@@ -172,7 +172,7 @@ be found on the <a href="specs/">specifications page</a>.
         <div class="col-lg-4">
           <!-- START SERVICE 1 -->
                     <div class="service-active">
-                        <a href="specs"><span class="service-trigger icon icon-users"><p>IDENTITY</p></span></a>
+                        <a href="specs#identity"><span class="service-trigger icon icon-users"><p>IDENTITY</p></span></a>
                         <div class="service-content">
                             <p>One of the hardest things about transacting online is making sure that the person you're dealing with is reputable. We're working with browser vendors to make sure that the identity you use online is expressive, secure, and that you can count on the merchants you deal with online to be trustworthy.</p>
                         </div><!-- service-content -->
@@ -183,7 +183,7 @@ be found on the <a href="specs/">specifications page</a>.
         <div class="col-lg-4">
           <!-- START SERVICE 2 -->
                     <div class="service-active">
-                        <a href="specs"><span class="service-trigger icon icon-lock"><p>SECURITY</p></span></a>
+                        <a href="specs#security"><span class="service-trigger icon icon-lock"><p>SECURITY</p></span></a>
                         <div class="service-content">
                             <p>Security is our top priority, everything we work on depends on high standards with respect to secure systems. Greatly reducing fraud is dependent on stronger security features. We are working with the best security experts in the world and are hardening security practices on the Web.</p>
                         </div><!-- service-content -->
@@ -194,7 +194,7 @@ be found on the <a href="specs/">specifications page</a>.
         <div class="col-lg-4">
           <!-- START SERVICE 3 -->
                     <div class="service-active">
-                        <a href="specs"><span class="service-trigger icon icon-tools"><p>APIS</p></span></a>
+                        <a href="specs#transactions"><span class="service-trigger icon icon-tools"><p>APIS</p></span></a>
                         <div class="service-content">
                             <p>A programmable financial infrastructure, built on the Web. That is what we hope to achieve in the next several years. The democratization of these financial tools will lower the barrier to entry for new businesses and financial products. An open financial architecture will usher in a more equitable future. </p>
                         </div><!-- service-content -->
