--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ be found on the <a href="specs/">specifications page</a>.
         <br>
         <div class="col-lg-offset-2 col-lg-10">
           <p><span class="icon icon-home"></span> <a href="http://www.w3.org/community/webpayments/">Web Payments Community Group</a> |
-            <span class="icon icon-phone"></span> <a href="tel:15409614469">1-540-961-4469 x6300</a> |
+            <span class="icon icon-phone"></span> <a href="minutes">Weekly Teleconferences</a> |
             <span class="icon icon-envelop"></span> <a href="http://lists.w3.org/Archives/Public/public-webpayments/">Web Payments Mailing List</a> |
             <span class="icon icon-twitter"></span> <a href="https://twitter.com/payswarm"> @w3cpayments </a> <br/>
           </p>
