Added new Twitter account for group called w3payments.

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ be found on the <a href="specs/">specifications page</a>.
           <p><span class="icon icon-home"></span> <a href="http://www.w3.org/community/webpayments/">Web Payments Community Group</a> |
             <span class="icon icon-phone"></span> <a href="minutes">Weekly Teleconferences</a> |
             <span class="icon icon-envelop"></span> <a href="http://lists.w3.org/Archives/Public/public-webpayments/">Web Payments Mailing List</a> |
-            <span class="icon icon-twitter"></span> <a href="https://twitter.com/payswarm"> @w3cpayments </a> <br/>
+            <span class="icon icon-twitter"></span> <a href="https://twitter.com/w3payments"> @w3payments </a> <br/>
           </p>
         </div><!-- col -->
         
@@ -247,7 +247,7 @@ be found on the <a href="specs/">specifications page</a>.
 
     <div id="footerwrap">
       <div class="container">
-        <h4>Created by the <a href="http://www.w3.org/community/webpayments/">Web Payments Community Group</a>. Shared with love under a <a href="http://creativecommons.org/licenses/by/4.0/">CC-BY</a> license.</h4>
+        <h4>Created by the <a href="http://www.w3.org/community/webpayments/">Web Payments Community Group</a>. Shared with love under a <a href="http://creativecommons.org/licenses/by/4.0/">CC-BY</a> license. Thanks to our <a href="thanks.html">contributors</a>.</h4>
       </div>
     </div>
 
