Reformatting join page to match new Bootstrap 3 theme.

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ same thing for money. There is no global standard for sending money over the Int
         <div class="col-lg-6">
           <p>A large group of us are doing just this at the 
 <a href="http://www.w3.org/">World Wide Web Consortium</a>, the group that creates the core technology for the Web. We are the 
-<a href="http://www.w3.org/community/webpayments/">Web Payments Community Group</a>, and we are making it as easy and fast to send money around the world as it is to send an email. Our approach is different from the way traditional payment technology is built. We believe in a level playing field. We operate out in the open. We are transparent. Come <a href="join.xhtml">join us</a> and make a difference in the world.</p>
+<a href="http://www.w3.org/community/webpayments/">Web Payments Community Group</a>, and we are making it as easy and fast to send money around the world as it is to send an email. Our approach is different from the way traditional payment technology is built. We believe in a level playing field. We operate out in the open. We are transparent. Come <a href="join">join us</a> and make a difference in the world.</p>
         </div><!-- col-lg-6 -->
       </div><!-- row -->
     </div><!-- container -->
@@ -206,11 +206,12 @@ be found on the <a href="specs/">specifications page</a>.
                         <br/>
                         <br/>
       <div class="row">
-        <h2 id="participat" name="participate" class="centered">PARTICIPATE, JOIN US.</h2>
+        <h2 id="participat" name="participate" class="centered">PARTICIPATE, <a href="join">JOIN US</a>.</h2>
         <hr>
         <br>
         <div class="col-lg-offset-2 col-lg-8">
-          <p>In order to build a payment system that works for the world, you have to build it differently than most payment systems in use today. You have to be open, transparent, and try to get input from everyone affected by payments on the Web. There are no requirements to join this work other than a passion to help make the world a better place. We hold <a href="minutes/">weekly teleconferences</a> that are open to the public. We have a <a href="http://lists.w3.org/Archives/Public/public-webpayments/">mailing list</a> where we discuss this work which is free to join and participate. We've removed most of the barriers to entry because this will affect all of us, so all of us should have a say in how this technology is built.</p>
+          <p>In order to build a payment system that works for the world, you have to build it differently than most payment systems in use today. You have to be open, transparent, and try to get input from everyone affected by payments on the Web. There are no requirements to 
+<a href="join">join this work</a> other than a passion to help make the world a better place. We hold <a href="minutes/">weekly teleconferences</a> that are open to the public. We have a <a href="http://lists.w3.org/Archives/Public/public-webpayments/">mailing list</a> where we discuss this work which is free to join and participate. We've removed most of the barriers to entry because this will affect all of us, so all of us should have a say in how this technology is built.</p>
           <p></p>
           <p></p>
         </div><!-- col-lg -->
