--- a/join.html
+++ b/join.html
@@ -99,7 +99,7 @@ Anyone may join the group and participate for free. Here's how:
 
     <div id="footerwrap">
       <div class="container">
-        <h4>Created by the <a href="http://www.w3.org/community/webpayments/">Web Payments Community Group</a>. Shared with love under a <a href="http://creativecommons.org/licenses/by/4.0/">CC-BY</a> license.</h4>
+        <h4>Created by the <a href="http://www.w3.org/community/webpayments/">Web Payments Community Group</a>. Shared with love under a <a href="http://creativecommons.org/licenses/by/4.0/">CC-BY</a> license. Thanks to our <a href="thanks.html">contributors</a>.</h4>
       </div>
     </div>
 
